Closed
Bug 1396637
Opened 9 years ago
Closed 8 years ago
Text shift on hover on Mozilla Gfx Team Blog with WebRender enabled
Categories
(Core :: Graphics: WebRender, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla60
| Tracking | Status | |
|---|---|---|
| firefox56 | --- | unaffected |
| firefox57 | --- | unaffected |
| firefox58 | --- | unaffected |
| firefox59 | --- | unaffected |
| firefox60 | --- | unaffected |
People
(Reporter: yoasif, Assigned: lsalzman)
References
(Blocks 1 open bug, )
Details
(Keywords: correctness, nightly-community, Whiteboard: [wr-reserve] [gfx-noted])
Attachments
(2 files, 1 obsolete file)
|
84.90 KB,
video/mp4
|
Details | |
|
1.27 KB,
patch
|
jrmuizel
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:57.0) Gecko/20100101 Firefox/57.0
Build ID: 20170904100131
Steps to reproduce:
Enable WebRender with steps:
turn off layers.async-pan-zoom.enabled
turn on gfx.webrender.enabled
turn on gfx.webrendest.enabled
turn on gfx.webrender.layers-free
add and turn on gfx.webrender.blob-images
if you are on Linux, turn on layers.acceleration.force-enabled
Naviagate to https://mozillagfx.wordpress.com/
Hover over links for any of:
WebRender newsletter #1
WebRender newsletter #2
WebRender newsletter #3
Actual results:
The link text jumps up and to the left, then snaps back into place with the on hover color.
Expected results:
Text should not have jumped, color should have just changed.
See screengrab.
Updated•9 years ago
|
Component: Untriaged → Graphics: WebRender
Product: Firefox → Core
Comment 1•9 years ago
|
||
On mac, blob-images and APZ-off doesn't seem to matter.
Probably my fault somehow, not sure why yet.
Comment 2•9 years ago
|
||
Ah, for some reason those have a CSS transition, which is what causes it. We're not very good at that kind of thing in webrender right now.
Kats, any idea if we've seen this one before?
Flags: needinfo?(bugmail)
Updated•9 years ago
|
Blocks: stage-wr-nightly
Whiteboard: [gfx-noted]
Updated•9 years ago
|
Priority: -- → P3
Updated•9 years ago
|
Priority: P3 → P2
Whiteboard: [gfx-noted] → [wr-mvp] [gfx-noted]
Updated•9 years ago
|
status-firefox56:
--- → unaffected
status-firefox57:
--- → unaffected
Comment 3•9 years ago
|
||
I don't recall any exising bug on file that would cover this, no.
Flags: needinfo?(bugmail)
Updated•9 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 4•8 years ago
|
||
Nightly 58 x64 20171020100426 de_DE @ Debian Testing (KDE, Radeon RX480).
main profile: layers force accel + webrender + webrendest + blob-image + gpu process + omtp
WFM
(In reply to Asif Youssuff from comment #0)
Can you confirm this?
| Reporter | ||
Comment 5•8 years ago
|
||
It is a lot better now, it jumps a lot less. It's more of a small shift. This doesn't occur in a fresh nightly profile, however, so it continues to be unexpected.
Updated video attached.
Attachment #8904317 -
Attachment is obsolete: true
| Reporter | ||
Updated•8 years ago
|
Summary: Jumpy text on hover on Mozilla Gfx Team Blog with WebRender enabled → Text shift on hover on Mozilla Gfx Team Blog with WebRender enabled
Updated•8 years ago
|
Priority: P2 → P3
Whiteboard: [wr-mvp] [gfx-noted] → [wr-reserve] [gfx-noted]
Updated•8 years ago
|
Blocks: webrender-site-issues
Updated•8 years ago
|
Priority: P3 → P1
| Assignee | ||
Comment 6•8 years ago
|
||
We are hitting essentially the same problem we are with Skia - that subpixel positioning is causing us to not rasterize glyphs where Cairo metrics are putting them.
So we need the same workaround for now, just to disable subpixel positioning here until such time as we punt Cairo. This should fix the epidemic of text shifting bugs we are seeing.
Updated•8 years ago
|
Attachment #8949359 -
Flags: review?(jmuizelaar) → review+
Pushed by lsalzman@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/94d10cf318b8
disable WR subpixel positioning with FreeType. r=jrmuizel
Comment 8•8 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
status-firefox60:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla60
Comment 9•8 years ago
|
||
(In reply to Asif Youssuff from comment #5)
> Created attachment 8920741 [details]
> moving-text.mp4
>
> It is a lot better now, it jumps a lot less. It's more of a small shift. This doesn't occur in a fresh nightly profile, however, so it continues to be unexpected.
Is it fixed?
Flags: needinfo?(yoasif)
Updated•8 years ago
|
Status: RESOLVED → VERIFIED
status-firefox58:
--- → unaffected
status-firefox59:
--- → unaffected
Keywords: correctness,
nightly-community
You need to log in
before you can comment on or make changes to this bug.
Description
•