Bug 1396637 - disable WR subpixel positioning with FreeType. r=jrmuizel

MozReview-Commit-ID: Hu3Q9yuveRw